# cppkata

./: CMakeLists.txt  main.cpp
Tests/: Multiples.cpp  Multiples.h  MutiplesOf3Or5Test.cpp  Now.cpp  Now.h  NowTest.cpp  Prime.cpp  Prime.h  PrimeTest.cpp  SystemTimeProvider.cpp  SystemTimeProvider.h  TimeProvider.h
